[tool.poetry]
name = "xnes_adaptive_lr"
version = "0.1.0"
description = ""
authors = ["Masahiro Nomura <masahironomura5325@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.22.2"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
